# llm-ddp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  use_case_diagram.md
ddp-api/: test.py
ddp-api/app/: renderers.py  settings.py  urls.py
ddp-api/ddp/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py
ddp-api/ddp/migrations/: 0001_initial.py  0002_alter_column_foreign_key_table.py  0003_alter_column_data_type.py  0004_alter_column_description.py  0005_database_init_step.py  0006_remove_database_init_step.py  0007_database_db_type.py  0008_remove_table_kor_name.py  0009_rename_kor_name_database_name_and_more.py  0010_remove_column_kor_name.py  0011_rename_eng_name_column_name_and_more.py
ddp-api/ddp/services/: database_service.py  meta_service.py  table_service.py
ddp-api/ddp/utils/: mysql_connector.py
ddp-api/ddp/views/: column_view.py  database_view.py  meta_view.py  table_view.py
ddp-api/llm/: models.py  serializers.py  urls.py
ddp-api/llm/agents/: query_generator.py  result_summarizer.py  table_selector.py
ddp-api/llm/migrations/: 0001_initial.py  0002_remove_llmlog_finish_reason_and_more.py  0003_queryexecutionlog.py  0004_llmlog_agent.py  0005_alter_llmlog_table.py  0006_alter_queryexecutionlog_table.py
ddp-api/llm/services/: meta_service.py  query_service.py
ddp-api/llm/tools/: metadata_formatter.py
ddp-api/llm/utils/: logger.py
ddp-api/llm/views/: query_execution_view.py  sql_generation_view.py
ddp-api/test_generators/: run_all_generators.py
ddp-api/test_generators/ad/: ddl.sql  generate_data.py
(+6 files in other folders)
